deploy/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "api-development-certificate"
    kubernetes.io/ingress.global-static-ip-name: "development-ip"
#    kubernetes.io/ingress.global-static-ip-name: "api-development-ip"
  name: configuration-ingress
spec:
  rules:
    - host: api.development.bootifulpodcast.fm
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
